// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Criterion Container snapshot is grading 1`] = `
<React.Fragment>
  <Form.RadioSet
    name="random name"
    value="selected option"
  >
    <Form.Radio
      className="criteria-option"
      description="1 points"
      disabled={false}
      onChange={[MockFunction this.onChange]}
      value="option name"
    >
      this label
    </Form.Radio>
    <Form.Radio
      className="criteria-option"
      description="2 points"
      disabled={false}
      onChange={[MockFunction this.onChange]}
      value="option name 2"
    >
      this label 2
    </Form.Radio>
  </Form.RadioSet>
</React.Fragment>
`;

exports[`Radio Criterion Container snapshot is not grading 1`] = `
<React.Fragment>
  <Form.RadioSet
    name="random name"
    value="selected option"
  >
    <Form.Radio
      className="criteria-option"
      description="1 points"
      disabled={true}
      onChange={[MockFunction this.onChange]}
      value="option name"
    >
      this label
    </Form.Radio>
    <Form.Radio
      className="criteria-option"
      description="2 points"
      disabled={true}
      onChange={[MockFunction this.onChange]}
      value="option name 2"
    >
      this label 2
    </Form.Radio>
  </Form.RadioSet>
</React.Fragment>
`;
